--- a/angular.json
+++ b/angular.json
@@ -28,7 +28,9 @@
               "@angular/material/prebuilt-themes/purple-green.css",
               "src/styles.css"
             ],
-            "scripts": []
+            "scripts": [
+            "node_modules/@apirtc/apirtc/apiRTC.min.js"
+            ]
           },
           "configurations": {
             "production": {
