--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "prettier": "prettier --check \"./src/**/*.{ts,tsx,js,jsx,json,md}\"",
     "prettier:fix": "prettier --write \"./src/**/*.{ts,tsx,js,jsx,json,md}\"",
     "lint": "npm run eslint && npm run prettier",
-    "format": "npm run eslint:fix && npm run prettier:fix"
+    "format": "npm run eslint:fix && npm run prettier:fix",
+    "prepare": "husky install"
   },
   "private": true,
   "dependencies": {
@@ -49,6 +50,7 @@
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.0.0",
     "prettier": "^2.8.4",
-    "typescript": "~4.9.4"
+    "typescript": "~4.9.4",
+    "husky": "^8.0.0"
   }
 }
