--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,14 +13,13 @@ jobs:
     steps:
       - uses: actions/checkout@v3
         with:
-          fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
+          fetch-depth: 0 # Shallow clones should be disabled for a better relevancy of analysis
       - name: SonarCloud Scan
         uses: SonarSource/sonarcloud-github-action@master
-        with :
+        with:
           args: >
-              -Dsonar.organization=naedri
-              -Dsonar.projectKey=Naedri_mgt-peer
-              -Dsonar.verbose=true
+            -Dsonar.organization=naedri -Dsonar.projectKey=Naedri_mgt-peer
+            -Dsonar.verbose=true
         env:
           GITHUB_TOKEN: ${{ secrets.SONAR_GITHUB_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
