--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
+    "test:ci": "ng test --browsers=ChromeHeadless --watch=false",
     "deploy": "ng deploy",
     "eslint": "eslint . --ext ts,tsx,js,jsx",
     "eslint:fix": "eslint . --fix --ext ts,tsx,js,jsx",
